# ARL_25_noetic_packages

./: .gitignore  Readme.md
advanced_robotics_control/: CMakeLists.txt  controller_plugin.xml  package.xml
advanced_robotics_control/config/: impedance_control_controller.yaml
advanced_robotics_control/include/advanced_robotics_control/: impedance_control_controller.h
advanced_robotics_control/launch/: impedance_control.launch
advanced_robotics_control/scripts/: circle_draw.py
advanced_robotics_control/src/: impedance_control_controller.cpp
my_scripts/: 1_dataset_create.py  2_train_model.py  3_validate_model.py  4_rs_detect.py  CMakeLists.txt  change_mode.py  chnage_to_current_mode.py  package.xml  requirement.txt
my_scripts/assignment_1/: change_mode.py  dmp_motions.py  motion_test.py  republish.py  requirements.txt
my_scripts/assignment_2/: 1_dataset_create.py  2_train_model.py  3_validate_model.py  4_rs_detect.py  dmp_controller.py  dmp_node.py  kinematics_test.py
my_scripts/assignment_3/: docker-compose.yaml  hanoi_manipulator.py
my_scripts/assignment_3/Docker_volume/: .webui_secret_key  hanoi_service_provider.py  hanoi_tagged_solution_3_disks.html  html_creator.py  ollama_call.py  open_webui.sh  play_puzzle.py  play_puzzle_with_rag.py  rag_call.py  rag_controller.py  toh_visual.py
my_scripts/assignment_3/Docker_volume/srv/: TowerMove.srv
om_position_controller/: CMakeLists.txt  ReadMe.md  controller_plugin.xml  package.xml
om_position_controller/config/: gazebo_controllers.yaml  position_controller.yaml
om_position_controller/include/om_position_controller/: position_controller.h
om_position_controller/launch/: position_control.launch
om_position_controller/models/: blue_cube.sdf  green_cube.sdf  red_cube.sdf
om_position_controller/recording/: pick_motion.pkl  place_motion.pkl
om_position_controller/scripts/: 4_rs_detect_sim.py  dmp_pick_and_place.py  dmp_pick_and_place2.py  move_to_home.py  pick_and_place.py  publish_joint_positions.py  simulated_trajectory.py  test copy.py  test.py
om_position_controller/src/: position_controller.cpp
open_manipulator/open_manipulator_control_gui/src/: qnode.cpp
open_manipulator_6dof_application/open_manipulator_6dof_control_gui/src/: qnode.cpp
open_manipulator_6dof_application/open_manipulator_motion/src/: open_manipulator_motion.cpp
open_manipulator_6dof_controls/: README.md
open_manipulator_6dof_controls/open_manipulator_6dof_controls/: CMakeLists.txt  package.xml
open_manipulator_6dof_controls/open_manipulator_controllers/config/: gravity_compensation_controller.yaml
open_manipulator_6dof_controls/open_manipulator_controllers/include/open_manipulator_controllers/: gravity_compensation_controller.h
open_manipulator_6dof_controls/open_manipulator_controllers/launch/: gravity_compensation_controller.launch
open_manipulator_6dof_controls/open_manipulator_controllers/src/: gravity_compensation_controller.cpp
open_manipulator_6dof_controls/open_manipulator_hw/config/: hardware.yaml
open_manipulator_6dof_controls/open_manipulator_hw/launch/: open_manipulator_control.launch  open_manipulator_gazebo.launch
open_manipulator_6dof_controls/open_manipulator_hw/src/: hardware_interface.cpp
open_manipulator_6dof_simulations/open_manipulator_6dof_gazebo/config/: open_manipulator_6dof_controller_torque.yaml
open_manipulator_6dof_simulations/open_manipulator_6dof_gazebo/launch/: open_manipulator_6dof_controller.launch  open_manipulator_6dof_gazebo.launch
open_manipulator_friends/open_manipulator_6dof_controller/: CMakeLists.txt
open_manipulator_friends/open_manipulator_6dof_controller/include/open_manipulator_6dof_controller/: open_manipulator_6dof_controller.h  open_manipulator_position_gazebo_controller.h
open_manipulator_friends/open_manipulator_6dof_controller/launch/: open_manipulator_position_gazebo_controller.launch
open_manipulator_friends/open_manipulator_6dof_controller/src/: open_manipulator_6dof_controller.cpp  open_manipulator_position_gazebo_controller.cpp
open_manipulator_friends/open_manipulator_6dof_description/urdf/: open_manipulator_6dof.urdf  open_manipulator_6dof.urdf.xacro  open_manipulator_6dof_torque.urdf.xacro
open_manipulator_friends/open_manipulator_6dof_libs/include/open_manipulator_6dof_libs/: dynamixel.h  open_manipulator.h
open_manipulator_friends/open_manipulator_6dof_libs/src/: dynamixel.cpp  open_manipulator.cpp
robotis_manipulator/: README.md
