<?xml version="1.0"?>
<package format="2">
  <name>my_scripts</name>
  <version>0.0.0</version>
  <description>The my_scripts package for Tower of Hanoi RAG and ROS integration.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="user@todo.todo">Your Name</maintainer> <!-- TODO: Update email and name -->

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license> <!-- TODO: Specify a license, e.g., Apache 2.0, MIT, BSD -->

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/my_scripts</url> -->

  <!-- Author tags are optional, multiple allowed, one per tag -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend> <!-- To generate messages/services from .msg/.srv files -->

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <!-- message_runtime is not typically a build_export_depend unless other packages directly use its generated headers in C++ -->

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> <!-- To use generated messages/services at runtime -->

  <!-- Other dependencies for your Python scripts might go here if they are system dependencies -->
  <!-- For Python package dependencies (pip installable), manage them with requirements.txt or setup.py -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>