<?xml version="1.0"?>
<package format="2">
  <name>om_position_controller</name>
  <version>0.0.0</version>
  <description>The om_position_controller package</description>
 <maintainer email="root@todo.todo">root</maintainer>
 <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>


  <export>
    <controller_interface plugin="${prefix}/controller_plugin.xml" />
  </export>
</package>
